--- a/index.html
+++ b/index.html
@@ -123,9 +123,9 @@
 					</ul>
 				-->
 				<p>
-					<a href="VictorMaoResumeModern09092018.pdf" target="_blank"><i class="fas fa-file-pdf fa-3x p-1" data-toggle="tooltip" title="View Resume"></i></a>
+					<a href="Victor_Mao_12_19_2018.pdf" target="_blank"><i class="fas fa-file-pdf fa-3x p-1" data-toggle="tooltip" title="View Resume"></i></a>
 					&nbsp;&nbsp;&nbsp;
-					<a href="VictorMaoResumeModern09092018.pdf" download="VictorMaoResume.pdf"><i class="fas fa-file-download fa-3x p-1" data-toggle="tooltip" title="Download Resume"></i></a>
+					<a href="Victor_Mao_12_19_2018.pdf" download="VictorMaoResume.pdf"><i class="fas fa-file-download fa-3x p-1" data-toggle="tooltip" title="Download Resume"></i></a>
 				</p>
 			</div>
 		</section>
